# ChangeLog for dev-libs/libclsync
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libclsync/ChangeLog,v 1.1 2015/02/11 03:35:23 bircoph Exp $

*libclsync-0.4 (11 Feb 2015)

  11 Feb 2015; Andrew Savchenko <bircoph@gentoo.org> +libclsync-0.4.ebuild,
  +files/libclsync-0.4-version.patch, +metadata.xml:
  Initial version ported from bircoph overlay
