@@ -2,24 +2,26 @@
 Hash: SHA256
 
 AUX libclsync-0.4-version.patch 694 SHA256 8b899b74f59dc6acb134ab4b2254e222c8d148ed827054c1e263625a73405c9d SHA512 9a08ecf5c062827d8e02b4822a879115d394d36d6c81bc138dee4b65519c6a2e333445e953965057d8b32ad3bca6ced8a699f59d798d31bb022c4b9129d8b681 WHIRLPOOL fd214257b4a2fd24120a4620df55edd78010f5db507493b3e0c1bd06f91e97e2b3caffdbabad4c4b0d1cc7c3f02d9d290805c4d6e10edf5e44d081ae1b837e1b
+DIST clsync-0.4.1.tar.gz 253890 SHA256 3f14a72d7c3c1747ea908e373f25bd1918ce00450492fbb7094549db6bf21e27 SHA512 875280f706026d44806b92c22fa58d016136b2792f67a6b7e77f932465081da7a1ebaf22c25e538e4b58bfe04cd1cd5450ecab99c3df53ddd2a0fa966442d444 WHIRLPOOL 10ab11821766f7d16d03993069ac4da5fe362a1e5977ea6721e49ada7044d3659e59b507b03be4de09609b0a0ca9d7878407d7b6e1f40df5dbe1d041dac373cb
 DIST clsync-0.4.tar.gz 253396 SHA256 6f0ce7a5f61fbb50db53b787b62cf5347870f3be315acb02c4aee6b76206d19e SHA512 9b17f5f8f0bfc48531f3d8cb4f1c1edd3116e0b7d140e8ab2465dd1c590521c9857202ed3f36466f13fb3309abb9232fb4acbe25b5652914a816fac498f74a48 WHIRLPOOL 18ae12df2d7e0403b21c5d4ab7352cd81446729d94fb300a799b98dad9f88aeaa98deb2ba5f52858d3b6ba7406d777e53e97dae5c3a4802a229511db9c8a3482
+EBUILD libclsync-0.4.1.ebuild 1927 SHA256 f28120fcc41849534f4b7d7b15436597ef0efaef498babcc6d33ba67456a7ed3 SHA512 d3a7377d3b37e3bb1e474837130ab48ceacdde1cba1d4ba6d2a30d2907b746b4182b058878d78cf891dec0379c1d7dbe3442e669ce94a018cd7580c9e8ff9ea5 WHIRLPOOL ff99c7a91adf8c4b5da703438a65e11af45280b57367b041a19ad996838d179dfbe2d08e9e2a57aa9c73713226f524b8ff631b897fac67a5e1b5a3842e9611f5
 EBUILD libclsync-0.4.ebuild 1941 SHA256 bffb0f8b6641e2744e2de21f04279c9b23db21a44d571dc939c1828ae722d2e3 SHA512 0dd2e280d78471d1700d8f77efadea37c0f53d4d6370c763fd1afa475a9493ab105ca4ab94c4193a3dd5f98facbf89a14ce1d04974e4853e99df7a2d9e94d0e9 WHIRLPOOL 0d32c8c79a6f2415d67ecf2129ce82c5dc14f842cf33d50a0a77b180f223aeab6cbd378dcd19d11b3512ee5ac0d3ae60036dc900e40f01c09cec353b2d0703f7
-MISC ChangeLog 416 SHA256 1de14d1327cd07f0e8f087100e52b79aaa83c67a7279a08d60bf4aadaff1bcf0 SHA512 b5fefe60f275b7a9121286add0cd439a3578fb2882b0811f437bd39c996212fd00a382477d15c4de46e959afe76aaaaab76aca452bfae959108340ac4b22d9eb WHIRLPOOL e8f117cf23b28996296fd29d26f6f389e3e6ed2aae9d932c977e1afdfd150e07c8d09372a75eb5adae72f006de4632a1eb3f390552ce18c18e07626d0d8deebf
-MISC metadata.xml 480 SHA256 45d0bd4fe8668c34065d6e58b4faab484f9ba9afb5708912ff1f527a4502654f SHA512 992b714c750ccf6d5cde22c5f2a8426ec3ad69a7e0617a40a4fba5f3fe04278a1758f11e6f57434db9e7aac5bec158ca163038d2f871ef02e6e1dd214c664107 WHIRLPOOL ec0fac7cbf08f1477b9fb3d8580fa9b8b9bd7dbb777a53d5cd98b7f9ada76a5b4ecd320d2c0f3a74a9ef949ed4b78669d601fd056f699051f64d3c17cff30c5e
+MISC ChangeLog 572 SHA256 eef2c51269135327b9d20a74c48902a85879a2b6dc1ca71cfc4fc9e9f44dfc4f SHA512 0f6ed0de1740455e07ccea2fdb66e4d34c9df64d552a794c643461bdab25439759e21ea811ff2392de5012a75d945d01eab84c9cd84064f008a5b0c1a80fbab7 WHIRLPOOL 41854fa021668270198c411215c5a7002f1610f7be3b7bf37aa54e70372cb1cadfb719a8a564ce7568c7e80a7cdb3669fb93872067a1d657894ff87c817a6133
+MISC metadata.xml 600 SHA256 3bd10a7ec53ceadfdff25cd15bb7d474e7e6d46ff5057d98e880d823fbc53bd7 SHA512 f182046e4508569ffd61a219d837d94766dd54d7753c122eb0b274ddc4db01326641665c65f044f75033ddf513d351629bb69379fcac6b2b7c86d770f52109bf WHIRLPOOL 2f20facefc6f4e64640fa3162b5223b190b8d095d74924c41343df8462ee47fdd1986a763198e6b2032bffbf44ce424f1b5ed405f8939d267ed901ab28c32aa7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU2s39AAoJEPZTWjO6HuSNrqcQAJh3MwHyUnkE2vntZUXupxF6
-jAHs3XktF1zSWKaUn2qj9uQyU/nxZ2+OvJCIceLenjE2ynNpH2/TGGJ9Dj1QJVpp
-F4l2p0VRIiFI0y7fuu943MWTzj9vSSCT5fqKN7yfWldrb2Lh9OncEjdLkRDonVET
-l+0s4Kt1HSnniAvClCZp3S2fY1MnBlG2iK0Iu6Qb6zK2jUYuG0O1hd42VsFRbm5A
-iePMYscc61MHODNf1dHsBw91WHsWkAyCiZfkwtojzQFAEThRGaB5vvNMU8Cv19Dv
-FccL0E5jpNJGazC3R2TKOJEpuWkMaG5ET31d+MKADVLWmzsqM31s7HM1qsougOHY
-Ujdi/t0oFY2R88vJPcFl9VRrkIh47BW2mPFl4JPaUT1drZ0B1b/UbO5reqPOf/Yi
-0MdQllHOhcBFx4GDaPa4t1uDxioevdPWyDLkwC7Ch1ivGp3IgTJOQywX4lSn68m8
-3mJXxSudjI/kVtez6amFnNVnQigvBx5a26vF3/YwBh/uYyARQmerr4uAaCQ6upnG
-cGx2aeu2Ov54yD8ENjhtqmu8PH4t9rI0IeJ1ePZ4gsBcyZ8FuVhq4nRlNmPQZU2D
-3O3G3kD1/Ng1pniEH3vOBRPRiVKBrMQLoiYQf4rcjOqcUX65VUGM70lnj+I2mKNG
-2UK8SOkfIKhi3u5OkoBg
-=u+6H
+iQIcBAEBCAAGBQJVYmj8AAoJEPZTWjO6HuSNtnsP/R120ILX2j4ZRRfQp4NOn+SA
+D9KOFL15ILLIYYRB1lUMBQmGAiwFjQsNt+6Iqbo2Okm0Et+C3KT/hWjMBpXRtUVW
+U3NhE4dVEpDFeHLtwUWzlC3NqJvnottXEvS/6y08WLID5LL6ebXsxoL42+ZoR3y4
+NKIeKf3OdXr3/Y315vP1Nk2NCmz1s3GUx9ayXUTUssGvbGgXcGr3KjiEU42KQn6g
+8N4J+fQpeoLRxmOizGueZ03Oop9FsGbXl8AW0SV1eP9xol0G9KngxjC1Bte0ChNg
+zqlzV9W9Uw9YDYhuYTgd+Mxl+yVmTzIzcZRjo0USV5M+x+m7TLkORvztrGUKsunW
+11EKRR+mFmvVjm25BtAeJflLWfWSbuzalfOyOmq84zmohN7u4FkmgYGirYIg7yTO
+v+suAJRIy4Z+w5rwo9hy9kK05VjCgGnlHg4M14iPY9EfHTGX5/S6ube6/Msac9yp
+VRAbO1SFkX5JIeS+5zGGVGiDvAA+/5unz8W/fl0sraB2lKM2GmooAQhEt+d74kJM
+evgOc3krHTRdD4JD6ZS5Tg3id5d2ObKLgDXWEMkouiwAAVuuyMe0jfVZj8dxrGYI
+SV8lL4RbaUrMM89J2/q7RbCKPkKjwvuOtyAJgWG0HyoxM8CMx1jEqVoMMOanJ9Ma
+hQL0N113wdVXHIAk/snA
+=hUon
 -----END PGP SIGNATURE-----
