@@ -10,6 +10,7 @@
   <pkg>app-admin/clsync</pkg> processes.
 </longdescription>
 <use>
+	<flag name="extra-debug">Enable extra debugging. This will hurt performance badly. Be ready for tons of output.</flag>
 	<flag name="extra-hardened">Enable extra security checks. This may hurt performance.</flag>
 </use>
 </pkgmetadata>
