@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libclsync
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libclsync/ChangeLog,v 1.1 2015/02/11 03:35:23 bircoph Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libclsync/ChangeLog,v 1.2 2015/05/25 00:12:42 bircoph Exp $
+
+*libclsync-0.4.1 (25 May 2015)
+
+  25 May 2015; Andrew Savchenko <bircoph@gentoo.org> +libclsync-0.4.1.ebuild:
+  Version bump. Add extra debugging support.
 
 *libclsync-0.4 (11 Feb 2015)
 
